# Companion

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Companion.sln  CompareCV.sln  README.md  UWPToolset.cmake  doxygen.conf
Companion/companion/: CMakeLists.txt  Configuration.cpp  Configuration.h  companion.cpp  companion.h
Companion/companion/algo/detection/: Detection.h  ShapeDetection.cpp  ShapeDetection.h
Companion/companion/algo/recognition/: Recognition.h
Companion/companion/draw/: Drawable.h  Frame.cpp  Frame.h  Line.cpp  Line.h
Companion/companion/input/: Image.cpp  Image.h  Stream.h  Video.cpp  Video.h
Companion/companion/model/processing/: FeatureMatchingModel.cpp  FeatureMatchingModel.h  ImageHashModel.cpp  ImageHashModel.h
Companion/companion/model/result/: DetectionResult.cpp  DetectionResult.h  RecognitionResult.cpp  RecognitionResult.h  Result.cpp  Result.h
Companion/companion/processing/: ImageProcessing.h
Companion/companion/processing/detection/: ObjectDetection.cpp  ObjectDetection.h
Companion/companion/processing/recognition/: HashRecognition.cpp  HashRecognition.h  HybridRecognition.cpp  HybridRecognition.h  MatchRecognition.cpp  MatchRecognition.h
Companion/companion/search/: compare.cpp  compare.h  flann.cpp  flann.h  search.cpp  search.h  templatematch.cpp  templatematch.h
Companion/companion/thread/: StreamWorker.cpp  StreamWorker.h
Companion/companion/util/: CompanionError.h  CompanionException.cpp  CompanionException.h  Definitions.h  Util.cpp  Util.h
Companion/companion/util/exportapi/: ExportAPIDefinitions.h
libCompanion/: CMakeLists.txt  companion.h
libCompanion/companion/: CMakeLists.txt  Companion.cpp  Companion.h  Configuration.cpp  Configuration.h  companion.cpp  companion.h
libCompanion/companion/algo/: AbstractFeatureMatching.cpp  AbstractFeatureMatching.h  FeatureMatching.cpp  FeatureMatching.h  ImageRecognition.h
libCompanion/companion/algo/2D/: FeatureMatching.cpp  FeatureMatching.h  ShapeDetection.cpp  ShapeDetection.h
libCompanion/companion/algo/abstract/: AbstractFeatureMatching.cpp  AbstractFeatureMatching.h  ImageRecognition.h  Matching.cpp  Matching.h
libCompanion/companion/algo/cpu/: CPUFeatureMatching.cpp  CPUFeatureMatching.h  FeatureMatching.cpp  FeatureMatching.h
libCompanion/companion/algo/cuda/: CFeatureMatching.cpp  CFeatureMatching.h  CudaFeatureMatching.cpp  CudaFeatureMatching.h
libCompanion/companion/algo/detection/: ShapeDetection.cpp  ShapeDetection.h
libCompanion/companion/algo/hashing/: Hashing.h  LSH.cpp  LSH.h
libCompanion/companion/algo/matching/: FeatureMatching.cpp  FeatureMatching.h  Matching.h
libCompanion/companion/algo/util/: IRA.cpp  IRA.h
libCompanion/companion/draw/: Drawable.h  Frame.cpp  Frame.h  Line.cpp  Line.h  Lines.cpp  Lines.h
libCompanion/companion/input/: Image.cpp  Image.h  Stream.h  Video.cpp  Video.h
libCompanion/companion/model/: FeatureMatchingModel.cpp  FeatureMatchingModel.h  ImageRecognitionModel.cpp  ImageRecognitionModel.h  Result.cpp  Result.h
libCompanion/companion/model/processing/: FeatureMatchingModel.cpp  FeatureMatchingModel.h  ImageHashModel.cpp  ImageHashModel.h  ImageRecognitionModel.cpp  ImageRecognitionModel.h
libCompanion/companion/model/result/: DetectionResult.cpp  RecognitionResult.cpp  Result.cpp  Result.h
libCompanion/companion/openCV3/algo/: FeatureMatching.cpp  FeatureMatching.h  ImageRecognition.h  RectangleDetection.h
libCompanion/companion/openCV3/configuration/: CompanionConfig.cpp  CompanionConfig.h
libCompanion/companion/openCV3/detection/: HarrisCorner.cpp  HarrisCorner.h  ObjectTracking.cpp  ObjectTracking.h  RectangleDetection.cpp  RectangleDetection.h
libCompanion/companion/openCV3/draw/: Drawable.h  Line.cpp  Line.h  Lines.cpp  Lines.h
libCompanion/companion/openCV3/model/: Comparison.cpp  Comparison.h  FeatureMatchingModel.cpp  FeatureMatchingModel.h  ImageRecognitionModel.cpp  ImageRecognitionModel.h
libCompanion/companion/openCV3/processing/: ImageProcessing.h  ObjectDetection.cpp  ObjectDetection.h
libCompanion/companion/openCV3/search/: FeatureMatching.cpp  FeatureMatching.h  ImageRecognition.cpp  ImageRecognition.h  SimpleCompareImage.cpp  SimpleCompareImage.h  TemplateMatch.cpp  TemplateMatch.h
libCompanion/companion/openCV3/stream/: Video.cpp  Video.h  VideoCapture.cpp  VideoCapture.h
libCompanion/companion/openCV3/thread/: ConsumerStream.cpp  ConsumerStream.h  ProducerStream.cpp  ProducerStream.h  wqueue.h
libCompanion/companion/openCV3/util/: CompanionError.h  Util.cpp  Util.h
libCompanion/companion/processing/: FeatureDetection.cpp  FeatureDetection.h  HashDetection.cpp  HashDetection.h  HybridDetection.cpp  HybridDetection.h  ImageProcessing.h  ObjectDetection.cpp  ObjectDetection.h
libCompanion/companion/processing/2D/: FeatureDetection.cpp  FeatureDetection.h  HashDetection.cpp  HashDetection.h  ObjectDetection.cpp  ObjectDetection.h
libCompanion/companion/processing/detection/: ObjectDetection.h
libCompanion/companion/processing/recognition/: HashRecognition.cpp  HybridRecognition.cpp  HybridRecognition.h  MatchRecognition.cpp
libCompanion/companion/search/: featurematch.cpp
libCompanion/companion/stream/: Image.cpp  Image.h  Stream.h  Video.cpp  Video.h
libCompanion/companion/thread/: ConsumerStream.cpp  ConsumerStream.h  ProducerStream.cpp  ProducerStream.h  StreamWorker.cpp  StreamWorker.h
libCompanion/companion/util/: CompanionError.h  CompanionException.cpp  CompanionException.h  Definitions.h  Util.cpp  Util.h
libCompanion/companion/util/exportapi/: ExportAPI.cpp  ExportAPI.h  (+1 more)
libCompanion/search/: CMakeLists.txt  compare.cpp  templatematch.cpp
main/: 2DObjectDetection.cpp  CMakeLists.txt  main.cpp
samples/: 2DObjectDetection.cpp  CMakeLists.txt
src/: CMakeLists.txt  companion.cpp  companion.h  main.cpp
src/search/: CMakeLists.txt  compare.cpp  compare.h  featurematch.h  flann.cpp  flann.h  search.cpp  search.h  templatematch.h
testing/rectangleDetection/: CMakeLists.txt  RectangleDetection.cpp  RectangleDetection.h
(+553 files in other folders)
